spacing and alignment issue fixed for cart coupon

--- a/resources/assets/scss/_cart.scss
+++ b/resources/assets/scss/_cart.scss
@@ -647,7 +647,7 @@ body{
             visibility: hidden;
         }
         .text-success{
-            color: #ff353b !important;
+            color: #808080 !important;
         }
     }
 }
